# fastapi-query-filter

./: Makefile  README.md  pyproject.toml
.github/workflows/: python-check.yml
fastapi_query_filter/: __init__.py  definition.py  query.py  types.py  validation.py
fastapi_query_filter/utils/: iter.py  math.py  types.py
tests/: __init__.py  test_types.py
tests/utils/: test_iter.py  test_math.py
