[tool.poetry]
name = "fastapi-query-filter"
version = "0.1.0"
description = "FastAPI Query Filter."
authors = ["Dmitry Vasiliev <contact.vasiliev.dmitry@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_query_filter"}]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.20"
pydantic = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.5"
black = "^23.7.0"
sqlalchemy = {extras = ["mypy"], version = "^2.0.20"}
flake8 = "5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_codes = true

[tool.black]
target-version = ["py37"]
line_length = 120
